// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTabLinkWithTooltip handles children 1`] = `
<DocumentFragment>
  <mock-styledtooltiphostbase
    calloutprops="[object Object]"
    content="tooltip text"
    styles="[object Object]"
  >
    <mock-newtablink
      classname="insightsLink"
      href="test"
    >
      link text
    </mock-newtablink>
  </mock-styledtooltiphostbase>
</DocumentFragment>
`;

exports[`NewTabLinkWithTooltip renders with null tooltip content 1`] = `
<DocumentFragment>
  <mock-styledtooltiphostbase
    calloutprops="[object Object]"
    styles="[object Object]"
  >
    <mock-newtablink
      classname="insightsLink"
      href="test"
    />
  </mock-styledtooltiphostbase>
</DocumentFragment>
`;

exports[`NewTabLinkWithTooltip renders with null tooltip content: NewTabLink props 1`] = `
{
  "className": "insightsLink",
  "href": "test",
}
`;

exports[`NewTabLinkWithTooltip renders with null tooltip content: StyledTooltipHostBase props 1`] = `
{
  "calloutProps": {
    "styles": {
      "beak": "insightsTooltip",
      "root": "insightsTooltip",
    },
  },
  "children": <NewTabLink
    className="insightsLink"
    href="test"
  />,
  "content": undefined,
  "styles": {
    "root": "insightsTooltipHost",
  },
}
`;

exports[`NewTabLinkWithTooltip renders with tooltip content 1`] = `
<DocumentFragment>
  <mock-styledtooltiphostbase
    calloutprops="[object Object]"
    content="tooltip text"
    styles="[object Object]"
  >
    <mock-newtablink
      classname="insightsLink"
      href="test"
    />
  </mock-styledtooltiphostbase>
</DocumentFragment>
`;

exports[`NewTabLinkWithTooltip renders with tooltip content: NewTabLink props 1`] = `
{
  "className": "insightsLink",
  "href": "test",
}
`;

exports[`NewTabLinkWithTooltip renders with tooltip content: StyledTooltipHostBase props 1`] = `
{
  "calloutProps": {
    "styles": {
      "beak": "insightsTooltip",
      "root": "insightsTooltip",
    },
  },
  "children": <NewTabLink
    className="insightsLink"
    href="test"
  />,
  "content": "tooltip text",
  "styles": {
    "root": "insightsTooltipHost",
  },
}
`;
